# haskell_learning

./: 3.hs  README.md  add.hs  homework.hs  listsum.hs  maxthree.hs
homework2/: max2.hs  maxthree.hs
homework3/: sum2.hs
homework4/: eightqueen.hs  prime.hs  sumsq.hs
homework4_gaosifunc/: fx.hs  fxabc.hs
homework5/: railway_network.hs
homework6/: polyvardic_sum.hs
homework7/: maybe_monad.hs  test_monad.hs
homework8/: statemonad_calculate.hs  statemonad_stack.hs
others/: borrowbooks_database.hs  expression.hs  hangman.hs  iotest.hs  picture.hs  wordCount.hs
project/code/: .gitignore  README.md  config.txt  image-processing.cabal  ip.hs  makefile
project/code/ImageProcessing/: Brightness.hs  Contrast.hs  Convolution.hs  Gamma.hs  Helpers.hs  MedianFilter.hs
project/code/src/: GUI.hs  Main.hs
