cabal-version:       >=1.10
name:                image-processing
version:             0.1.0.0
build-type:          Simple

executable image-processor
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5, JuicyPixels, transformers, text, mtl, split, gtk3 >= 0.14
  hs-source-dirs:      src, ImageProcessing
  default-language:    Haskell2010
  other-modules:       Helpers
                     , Convolution
                     , Brightness
                     , Contrast
                     , Gamma
                     , MedianFilter
                     , GUI



